--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio Edison Leite</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilos.css"> <!-- Referência ao arquivo CSS -->
 </head>
 <body>
     <!-- Cabeçalho -->
@@ -41,10 +41,10 @@
         function carregarConteudo(secao) {
             // Mapeia o nome da seção para o conteúdo correspondente
             var conteudo = {
-                'inicio': '<h2>Início</h2><p>Bem-vindo ao meu portfólio pessoal.</p><p> Aqui você encontrará informações sobre mim, minha formação, meu portfolio e como entrar em contato comigo.</p>',
+                'inicio': '<h2>Início</h2><p>Bem-vindo ao meu portfólio pessoal. Aqui você encontrará informações sobre mim, minha formação, meu portfolio e como entrar em contato comigo.</p>',
                 'sobre': '<h2>Sobre Mim</h2><ul><li>Músico</li><li>Vocalista</li><li>Guitarrista</li><li>Produção musical</li><li>Desde sempre, apaixonado por tecnologia!!!</li></ul>',
                 'formacao': '<h2>Formação</h2><ul><li>Formado em Processos Gerenciais pela Uninter em 2016</li><li>Cursando nova formação em uma área totalmente diversa: Desenvolvimento Mobile!</li></ul>',
-                'portfolio': '<h2>Portfolio</h2><p>Aqui estão alguns vídeos do meu portfólio:</p><iframe width="560" height="315" src="https://www.youtube.com/embed/cn-JVMkmw7w" frameborder="0" allowfullscreen></iframe><br><br><iframe width="560" height="315" src="https://www.youtube.com/embed/HWyt3J4utY0" frameborder="0" allowfullscreen style="margin-bottom: 50px;"></iframe>',
+                'portfolio': '<h2>Portfolio</h2><p>Aqui estão alguns vídeos do meu portfólio:</p><div class="responsive-iframe-container"><iframe src="https://www.youtube.com/embed/cn-JVMkmw7w" allowfullscreen></iframe></div><div class="responsive-iframe-container"><iframe src="https://www.youtube.com/embed/HWyt3J4utY0" allowfullscreen></iframe></div>',
                 'contato': '<h2>Contato</h2><form id="formulario-contato" action="https://formspree.io/f/moqgrdya" method="POST" data-email="edikaoz@hotmail.com"><label for="nome">Nome:</label><br><input type="text" id="nome" name="nome" required><br><label for="email">Email:</label><br><input type="email" id="email" name="email" required><br><label for="mensagem">Mensagem:</label><br><textarea id="mensagem" name="mensagem" rows="6" required></textarea><br><button type="submit">Enviar</button></form>'
             };
             // Carrega o conteúdo da seção clicada
